# sable-text-converter

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  Updates_1.5.md  Updates_1.6.md  conanfile.py
cmake/: filesystem.cmake  libraries.cmake  platform.cmake
doc/: mingw_deps.md  readme.txt
example/: config.yml  readme.md
example/config/: in.yml
example/project/asm/: code.asm  rev2Custom.asm
example/project/text/menu/: menuText01.txt
example/project/text/normalTable/: 00.txt  01.txt  table.txt
include/asar/: asardll.c
include/wrapper/: filesystem.h
src/: CMakeLists.txt  FE3Packer.pro  cache.cpp  cache.h  characteriterator.cpp  datastore.cpp  datastore.h  exceptions.h  filelist.h  font.cpp  font.h  fontlist.cpp  fontlist.h  localecheck.cpp  localecheck.h  main.cpp  mapping.h  options.cpp  options.h  parse.cpp  parse.h  project.cpp  project.h  rompatcher.cpp  rompatcher.h  script.cpp  script.h  table.cpp  table.h  textblockrange.cpp  textblockrange.h  unicode.cpp  unicode.h  util.cpp  util.h
src/data/: CMakeLists.txt  address.h  addressdata.cpp  addresslist.cpp  addresslist.h  datastore.cpp  datastore.h  mapper.cpp  mapper.h  missing_data.cpp  missing_data.h  optionhelpers.h  options.h  table.cpp  table.h  textblock.h  textblockrange.h
src/files/: CMakeLists.txt  file.cpp  file.h  group.cpp  group.h
src/font/: CMakeLists.txt  builder.cpp  builder.h  characteriterator.cpp  characteriterator.h  codenotfound.h  error.cpp  error.h  font.cpp  font.h  fonthelpers.cpp  fonthelpers.h  normalize.cpp  normalize.h
src/lib/asar/: asardll.c
src/locale/: CMakeLists.txt  localecheck.cpp  localecheck.h
src/output/: CMakeLists.txt  formatter.cpp  formatter.h  outputcapture.cpp  outputcapture.h  rompatcher.cpp  rompatcher.h
src/parse/: CMakeLists.txt  block.cpp  block.h  blockparser.cpp  blockparser.h  errorhandling.h  fileparser.cpp  fileparser.h  fontlist.h  inserter.cpp  inserter.h  parse.cpp  parse.h  result.h  settings.h  textparser.cpp  textparser.h  unicode.cpp
src/project/: CMakeLists.txt  builder.cpp  builder.h  exceptions.h  folder.cpp  folder.h  group.cpp  group.h  groupparser.h  handler.cpp  handler.h  helpers.h  localecheck.cpp  localecheck.h  mapperconv.cpp  mapperconv.h  project.cpp  project.h  util.cpp  util.h
src/serialize/: CMakeLists.txt  yamlfontserializer.cpp  yamlfontserializer.h
tests/: CMakeLists.txt
tests/catch/: characteriterator.cpp  collisions.cpp  datastore.cpp  fonts.cpp  groupparser.cpp  main.cpp  mapping.cpp  parser.cpp  project.cpp  rompatcher.cpp  table.cpp  unicode.cpp
tests/catch/data/: addresslist.cpp  addresslist_test.cpp  collisions_test.cpp  mapper.cpp  mapper_test.cpp  table_test.cpp
tests/catch/font/: characteriterator.cpp  error.cpp  fonts.cpp  fonts_prefix_tests.cpp  fonts_test.cpp  normalize.cpp
tests/catch/output/: capture.cpp  capture_test.cpp  formatter.cpp  rompatcher.cpp  rompatcher_test.cpp
tests/catch/parse/: block_test.cpp  parse.cpp  testparser_singleline_tests.cpp  textparser.cpp  textparser_nonprefixed_tests.cpp  textparser_test_helpers.h  textparser_tests.cpp  unicode.cpp  unicode_test.cpp
tests/catch/project/: folder.cpp  group.cpp  groupparser_test.cpp  handler.cpp  handler_test.cpp  mapperconv_test.cpp  project_test.cpp  roms_test.cpp  util.cpp
tests/helpers/: files.h  helpers.cpp  helpers.h
tests/sample/: bad_test.asm  sample.asm  sample.sfc  sample.smc
